Refactor table components and enhance responsiveness: update button classes, improve mobile view handling, and adjust column labels for clarity